--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import HeroIndex from "../components/portfolio/HeroIndex.astro";
 import Contact from "../components/portfolio/Contact.astro";
 import ListProjects from "../components/portfolio/ListProjects.astro";
 import { Icon } from "astro-icon/components";
-const pageTitle = "NeonMint by | Fernando Lopez | EFEELE ";
+const pageTitle = "Gonzalo Pérez Martín";
 const description = "Is a modern, minimalist template crafted for developers and digital creatives.";
 const ogimage = {
   url: "/images/imagedefault.webp",
@@ -41,22 +41,6 @@ import Heading from "../components/ui/Heading.astro";
           <Icon class="text-3xl dark:text-white text-blacktext" name="code" />
           <Heading text="Projects" textGradient="Completed" level={2}/>
         </div>
-        <p
-          class="z-2 text-center mx-auto text-lg max-xl:text-base max-w-2xl dark:text-gray-200 text-blacktext my-6 leading-6 font-medium"
-        >
-          I love <b
-            class=" bg-gradient-to-r  from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-            >turning ideas into real projects.</b
-          >
-          <br /> Here I show you some of the <b
-            class="d bg-gradient-to-r  from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-            >developments</b
-          > I've worked on, applying technology, design, and lots of creativity.
-          <b
-            class=" bg-gradient-to-r  from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-            >Check them out!</b
-          >
-        </p>
       </ListProjects>
     </div>
   </section>
