First version of the web launch, academic training and computer skills

--- a/src/components/portfolio/Experience.astro
+++ b/src/components/portfolio/Experience.astro
@@ -2,18 +2,18 @@
 import ExperienceItem from "./ExperienceItem.astro";
 const EXPERIENCE = [
   {
-    date: "2021 - Present",
-    title: "Software Development Coordinator",
-    company: "EFEELE.DEV",
+    date: "2017 - 2022",
+    title: "Grado en Desarrollo de Videojuegos",
+    company: "Universidad Complutense de Madrid",
     description:
-      "I lead the planning, development, and implementation of software projects to optimize administrative processes and improve digital services. I manage and provide support for technology platforms, coordinating development teams to deliver efficient solutions.",
+      "Desarrollador de aplicaciones informáticas. Ingeniero de proyectos de entretenimiento. Dirección de proyectos digitales interactivos. Conocimiento de tipos y estructuras de datos más adecuadas a la resolución de problemas. Manejo de técnicas y herramientas de expresión y representación artística.",
   },
   {
-    date: "2019 - 2020",
-    title: "Software Development Coordinator",
-    company: "EFEELE.DEV",
+    date: "01/2025 - 05/2025",
+    title: "Curso en Animación 3D: de la idea a la comercialización",
+    company: "RTVE Instituto",
     description:
-      "I lead the planning, development, and implementation of software projects to optimize administrative processes and improve digital services. I manage and provide support for technology platforms, coordinating development teams to deliver efficient solutions.",
+      "Comprensión sólida de los principios, estilos y técnicas fundamentales de la animación. Desarrollo de proyectos de animación desde cero en técnicas de stop motion, animación 2D y 3D.",
   },
   
 ];
