--- a/src/components/portfolio/HeroIndex.astro
+++ b/src/components/portfolio/HeroIndex.astro
@@ -6,12 +6,12 @@ import { Icon } from "astro-icon/components";
 import Hobbies from "../portfolio/Hobbies.astro";
 
 const  {
-  profileImage = "/images/efeeleprofile.webp",
+  profileImage = "/images/perfilgonzalo.webp",
   profileAlt = "Photo of Fernando Aldair López Ponce (EFEELE) for the blog",
   profileLink = "/about-me",
-  profileTitle = "FrontEnd Developer",
-  profileName = "Fernando López",
-  githubLink = "https://github.com/EFEELE/NeonMint",
+  profileTitle = "Desarrollador de Videojuegos",
+  profileName = "Gonzalo Pérez Martín",
+  githubLink = "https://github.com/GonzaPM7",
   githubText = "Do you like this blog's design?",
   portfolioImage = "/images/portfolio.webp",
   email = "hello@efeele.dev",
@@ -75,10 +75,7 @@ const  {
           <span
             class="bg-gradient-to-r from-riptide-500 to-mint-500 bg-clip-text font-black text-transparent   dark:from-riptide-300 dark:to-mint-200"
             >{profileTitle}</span
-          > with <span
-            class="bg-gradient-to-r from-riptide-500 to-mint-500 bg-clip-text font-black text-transparent  dark:from-riptide-300 dark:to-mint-200"
-            >8 years of experience</span
-          >, passionate about development, technology, and coffee that sparks ideas. I love bringing digital projects to life. 🚀☕
+          > apasionado por los proyectos audiovisuales, con experiencia en la creación de productos de entretenimiento y herramientas especializadas para el desarrollo de videojuegos. 
         </p>
 
         <div class="flex gap-4 max-sm:flex-col max-sm:items-center">
@@ -154,7 +151,7 @@ const  {
             name="dashboard"
             aria-hidden="true"
           />
-          <Heading text="Tech" textGradient="Stack" level={3} />
+          <Heading text="Habilidades" textGradient="Informaticas" level={3} />
         </div>
         <div class="overflow-y-auto">
           <Tools />
