--- a/src/components/portfolio/Tools.astro
+++ b/src/components/portfolio/Tools.astro
@@ -1,33 +1,19 @@
 ---
 const allTools = [
+  "unity",
+  "unreal",
+  "cplusplus",
+  "c",
+  "csharp",
+  "visualstudio",
+  "blender",
+  "photoshop",
+  "slack",
   "html",
-  "javascript",
-  "ts",
-  "angular",
-  "astro",
-  
+  "astro",  
   "node",
-
-  "css",
-  "tailwind",
-  "sass",
-  "bootstrap",
-
-  "mongo",
-  "firebase",
-  "mysql",
-
-  "cloudflare",
-
-  "figma",
-  "vercel",
-  "netlify",
-  
+  "css",  
   "git",
-  "markdown",
-
-  "php",
-  "wordpress",
 ];
 
 import Capsule from "../ui/Capsule.astro";
