--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Heading from "../components/ui/Heading.astro";
     <div class="flex flex-col  pt-8 max-w-4xl mx-auto">
       <div class="flex gap-4 items-center justify-center">
         <Icon class="text-3xl dark:text-white text-blacktext" name="briefcase" />
-        <Heading text="Experience" textGradient="Work" level={2}/>
+        <Heading text="Formación" textGradient="Académica" level={2}/>
       </div>
 
       <Experience />
@@ -39,7 +39,7 @@ import Heading from "../components/ui/Heading.astro";
       <ListProjects>
         <div class="flex gap-4 items-center justify-center text-center">
           <Icon class="text-3xl dark:text-white text-blacktext" name="code" />
-          <Heading text="Projects" textGradient="Completed" level={2}/>
+          <Heading text="Proyectos" textGradient="Videojuegos" level={2}/>
         </div>
       </ListProjects>
     </div>
