Add project, modified the home

--- a/src/components/portfolio/Tools.astro
+++ b/src/components/portfolio/Tools.astro
@@ -6,14 +6,16 @@ const allTools = [
   "c",
   "csharp",
   "visualstudio",
+  "githubsvg",
   "blender",
   "photoshop",
+  "davinci",
+  "opentoonz",
   "slack",
   "html",
   "astro",  
-  "node",
   "css",  
-  "git",
+  "procreate",
 ];
 
 import Capsule from "../ui/Capsule.astro";
