--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,8 +7,8 @@ import { Icon } from "astro-icon/components";
 const currentPath = Astro.url.pathname;
 const routes = ["/", "/portfolio", "/about-me", ]; 
 
-const github = "https://github.com/EFEELE";
-const linkedin = "https://www.linkedin.com/in/efeele/";
+const github = "https://github.com/GonzaPM7";
+const linkedin = "https://www.linkedin.com/in/gonzalo-perez-videogames-development/";
 
 // Check if the current route is in the list of routes
 const isActiveRoute = routes.includes(currentPath);
