--- a/src/layouts/MarkdownAbout.astro
+++ b/src/layouts/MarkdownAbout.astro
@@ -45,7 +45,7 @@ const { frontmatter } = Astro.props;
               </div>
               <div class="relative z-20 flex w-full rounded-full bg-mint-900">
                 <div
-                  class="w-full aspect-square rounded-full bg-[url(/images/efeeleprofile.webp)] bg-center bg-cover"
+                  class="w-full aspect-square rounded-full bg-[url(/images/perfilgonzalo.webp)] bg-center bg-cover"
                   aria-label="Photo of Fernando Aldair López Ponce (EFEELE) for the blog"
                 >
                   <a
@@ -59,7 +59,7 @@ const { frontmatter } = Astro.props;
 
           <div class="w-full flex flex-col justify-center gap-4 max-md:gap-2">
             <div class="text-center">
-              <Heading textGradient="Fernando López | EFEELE" />
+              <Heading textGradient="Gonzalo Pérez Martín" />
             </div>
 
             <p
@@ -67,18 +67,14 @@ const { frontmatter } = Astro.props;
             >
               <b
                 class="bg-gradient-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >Frontend Developer</b
-              > with <b
-                class="bg-gradient-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >8 years of experience</b
-              >, passionate about development, technology, and coffee that
-              sparks ideas. I love bringing digital projects to life. 🚀☕
+                >Desarrollador de Videojuegos</b
+              >  apasionado por los proyectos audiovisuales, con experiencia en la creación de productos de entretenimiento y herramientas especializadas para el desarrollo de videojuegos.
             </p>
           </div>
         </div>
       </div>
       <div class="flex gap-4 items-center">
-        <Heading text="About" textGradient="me" />
+        <Heading text="Sobre" textGradient="mi" />
       </div>
 
       <div class="markdown text-white" id="content">
