See all projects without having to see more

--- a/src/components/portfolio/ListAnimation.astro
+++ b/src/components/portfolio/ListAnimation.astro
@@ -16,7 +16,7 @@ allAnims.sort(
 
   <div
     id="containerAnimations"
-    class="mx-auto max-w-7xl grid grid-cols-3 max-lg:grid-cols-2 max-md:grid-cols-1 gap-5 p-2 py-4 max-h-[150vh] overflow-hidden transition-[max-height] duration-500 ease-in-out"
+    class="mx-auto max-w-7xl grid grid-cols-3 max-lg:grid-cols-2 max-md:grid-cols-1 gap-5 p-2 py-4 duration-500 ease-in-out"
   >
     {
       allAnims.map((post) => (
@@ -30,17 +30,6 @@ allAnims.sort(
         />
       ))
     }
-  </div>
-
-  <div
-    id="moreAnimations"
-    class="absolute bottom-0 left-0 w-full flex justify-center text-center bg-gradient-to-t from-[#FBFEFD] dark:from-[#0e0e10] from-55% to-transparent to-100% pb-30 pt-52"
-  >
-    <button
-      class="absolute font-bold cursor-pointer text-mint-400 dark:text-mint-100 hover:text-mint-500 dark:hover:text-mint-300 transition-all"
-    >
-      View More Projects...
-    </button>
   </div>
 </section>
 
