--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,17 +4,17 @@ import Header from "../components/layout/Header.astro";
 import Footer from "../components/layout/Footer.astro";
 import  SpeedInsights  from "@vercel/speed-insights/astro"
 const {
-  pageTitle = "NeonMint by EFEELE 🚀",
-  description = "Welcome to NeonMint by EFEELE, where I develop software and share knowledge.",
+  pageTitle = "Gonzalo Pérez Martín | Desarrollador de Videojuegos y Animador",
+  description = "PRUEBA DE DESCRIPCION",
   ogimage = {
     url: "/images/imagedefault.webp",
-    alt: "Default image of EFEELE",
+    alt: "",
   },
 } = Astro.props;
 
 const siteUrl = new URL(Astro.url).origin;
 const SEO = {
-  sitename: "NeonMint by EFEELE🚀",
+  sitename: "Gonzalo Pérez Martín | Desarrollador de Videojuegos y Animador 2",
   url: siteUrl,
   locale: "en_US",
   author: "Fernando Lopez | EFEELE",
