--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import Heading from "../components/ui/Heading.astro";
 
   <section
     class="py-8 px-8 max-md:py-4 mb-4 scroll-m-16"
-    id="academica"
+    id="experiencia"
   >
     <div class="flex flex-col  pt-8 max-w-4xl mx-auto">
       <div class="flex gap-4 items-center justify-center">
