--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,10 +14,9 @@ const {
 
 const siteUrl = new URL(Astro.url).origin;
 const SEO = {
-  sitename: "Gonzalo Pérez Martín | Desarrollador de Videojuegos y Animador 2",
   url: siteUrl,
   locale: "en_US",
-  author: "Fernando Lopez | EFEELE",
+  author: "Gonzalo Pérez Martín",
   twitter: "@efeeledev",
 };
 
