--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,11 @@ import Contact from "../components/portfolio/Contact.astro";
 import ListProjects from "../components/portfolio/ListProjects.astro";
 import ListAnimation from "../components/portfolio/ListAnimation.astro";
 import { Icon } from "astro-icon/components";
-const pageTitle = "Gonzalo Pérez Martín";
-const description = "Is a modern, minimalist template crafted for developers and digital creatives.";
+const pageTitle = "Gonzalo Pérez Martín | Game Developer";
+const description = "Portfolio de Gonzalo Pérez Martín";
 const ogimage = {
   url: "/images/imagedefault.webp",
-  alt: "Screenshot of a web portfolio with a modern and dark design. Featuring Fernando López, a Frontend Developer with 8 years of experience, highlighting his passion for development and technology. Includes contact sections, projects, and a technology stack with technologies like HTML5, JavaScript, TypeScript, Angular, Node.js, CSS, Tailwind, and more.",
+  alt: "",
 };
 import Heading from "../components/ui/Heading.astro";
 ---
