Final website settings

--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -157,7 +157,7 @@ const baseClasses = {
     role="group"
     aria-label="Social Media Links"
   >
-    <Social link="https://github.com/EFEELE" iconName="github" />
-    <Social link="https://www.linkedin.com/in/efeele/" iconName="linkedin" />
+    <Social link="https://github.com/GonzaPM7" iconName="github" />
+    <Social link="https://www.linkedin.com/in/gonzalo-perez-videogames-development/" iconName="linkedin" />
   </div>
 </nav>
