--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -6,14 +6,14 @@ import { Icon } from "astro-icon/components";
 import Heading from "../ui/Heading.astro";
 
 const { 
-  profileImage = "/images/efeeleprofile.webp",
-  profileAlt = "Photo of Fernando Aldair López Ponce (EFEELE) for the blog",
+  profileImage = "/images/perfilgonzalo.webp",
+  profileAlt = "Foto de Gonzalo Pérez Martín",
   profileLink = "/about-me",
-  profileTitle = "FrontEnd Developer",
-  profileName = "Fernando Aldair López Ponce",
-  githubLink = "https://github.com/EFEELE/NeonMint",
-  githubText = "Do you like this blog's design?",
-  techsTitle = "TECHS"
+  profileTitle = "Game Developer",
+  profileName = "Gonzalo Pérez Martín",
+  githubLink = "https://github.com/GonzaPM7",
+  githubText = "Perfil de GitHub",
+  techsTitle = "Técnicas"
 } = Astro.props;
 ---
 
@@ -84,7 +84,7 @@ const {
             ><b
               class="bg-gradient-to-r  from-riptide-400 to-mint-400 dark:from-riptide-200 dark:to-mint-400 text-transparent bg-clip-text"
               >{profileTitle}</b
-            > 🚀</span
+            > 🎮​</span
           >
           <Heading
           text={profileName}
