--- a/src/layouts/MarkdownAbout.astro
+++ b/src/layouts/MarkdownAbout.astro
@@ -46,7 +46,7 @@ const { frontmatter } = Astro.props;
               <div class="relative z-20 flex w-full rounded-full bg-mint-900">
                 <div
                   class="w-full aspect-square rounded-full bg-[url(/images/perfilgonzalo.webp)] bg-center bg-cover"
-                  aria-label="Photo of Fernando Aldair López Ponce (EFEELE) for the blog"
+                  aria-label="Foto de Gonzalo Pérez Martín"
                 >
                   <a
                     href="/about-me"
