--- a/src/components/portfolio/HeroIndex.astro
+++ b/src/components/portfolio/HeroIndex.astro
@@ -65,7 +65,7 @@ const  {
         <h1
           class="text-4xl font-black leading-none text-blacktext  dark:text-white max-xl:text-3xl max-lg:text-2xl  max-sm:text-center"
         >
-          {profileName} 👋
+          {profileName} 🕹️​
         </h1>
         <p
           class="mb-0 text-lg font-semibold leading-8 text-blacktext dark:text-gray-200 max-xl:text-base"
@@ -73,7 +73,11 @@ const  {
           <span
             class="bg-gradient-to-r from-riptide-500 to-mint-500 bg-clip-text font-black text-transparent   dark:from-riptide-300 dark:to-mint-200"
             >{profileTitle}</span
-          > apasionado por los proyectos audiovisuales, con experiencia en la creación de productos de entretenimiento y herramientas especializadas para el desarrollo de videojuegos. 
+          > con conocimientos en 
+          <span
+            class="bg-gradient-to-r from-riptide-500 to-mint-500 bg-clip-text font-black text-transparent   dark:from-riptide-300 dark:to-mint-200"
+            >animación</span
+          >, apasionado por los proyectos audiovisuales. Cuento con experiencia en la creación de productos de entretenimiento interactivos y en el desarrollo de herramientas especializadas para videojuegos. 
         </p>
 
         <div class="flex gap-4 max-sm:flex-col max-sm:items-center">
@@ -167,7 +171,7 @@ const  {
             name="dashboard"
             aria-hidden="true"
           />
-          <Heading text="Habilidades" textGradient="Informaticas" level={3} />
+          <Heading text="Habilidades" textGradient="Informáticas" level={3} />
         </div>
         <div class="overflow-y-auto">
           <Tools />
