--- a/src/components/portfolio/Tools.astro
+++ b/src/components/portfolio/Tools.astro
@@ -10,12 +10,14 @@ const allTools = [
   "blender",
   "photoshop",
   "davinci",
+  "procreate",
   "opentoonz",
   "slack",
+  "javascript",
+  "java",
   "html",
   "astro",  
   "css",  
-  "procreate",
 ];
 
 import Capsule from "../ui/Capsule.astro";
