--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Heading from "../components/ui/Heading.astro";
   >
     <div class="flex flex-col  pt-8 max-w-4xl mx-auto">
       <div class="flex gap-4 items-center justify-center">
-        <Icon class="text-3xl dark:text-white text-blacktext" name="briefcase" />
+        <Icon class="text-3xl dark:text-white text-blacktext" name="educacion" />
         <Heading text="Formación" textGradient="Académica" level={2}/>
       </div>
 
@@ -55,7 +55,7 @@ import Heading from "../components/ui/Heading.astro";
     <div class="flex flex-col gap-8 max-w-7xl mx-auto">
       <ListProjects>
         <div class="flex gap-4 items-center justify-center text-center">
-          <Icon class="text-3xl dark:text-white text-blacktext" name="code" />
+          <Icon class="text-3xl dark:text-white text-blacktext" name="consola" />
           <Heading text="Proyectos" textGradient="Videojuegos" level={2}/>
         </div>
       </ListProjects>
@@ -69,7 +69,7 @@ import Heading from "../components/ui/Heading.astro";
     <div class="flex flex-col gap-8 max-w-7xl mx-auto">
       <ListAnimation>
         <div class="flex gap-4 items-center justify-center text-center">
-          <Icon class="text-3xl dark:text-white text-blacktext" name="code" />
+          <Icon class="text-3xl dark:text-white text-blacktext" name="animacion" />
           <Heading text="Proyectos de " textGradient="Animación" level={2}/>
         </div>
       </ListAnimation>
