Image default web

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const {
   pageTitle = "Gonzalo Pérez Martín | Game Developer",
   description = "Portfolio de Gonzalo Pérez Martín",
   ogimage = {
-    url: "/images/imagedefault.webp",
+    url: "/images/captureweb.webp",
     alt: "",
   },
 } = Astro.props;
