change name image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Icon } from "astro-icon/components";
 const pageTitle = "Gonzalo Pérez Martín | Game Developer";
 const description = "Portfolio de Gonzalo Pérez Martín";
 const ogimage = {
-  url: "/images/imagedefault.webp",
+  url: "/images/captureweb.webp",
   alt: "",
 };
 import Heading from "../components/ui/Heading.astro";
